--- a/README.org
+++ b/README.org
@@ -80,6 +80,13 @@ its content.
 
 ** Noviembre 2025
 
+*** 26-Nov-25
++ [[https://arxiv.org/abs/2511.20550][Verifying numerical methods with Isabelle/HOL]]. ~ Dustin Bryant, Jonathan Julian Huerta y Munive, Simon Foster. #ITP #IsabelleHOL #Math
++ [[https://noamz.org/teaching/CSE301/2025/Notes/IntroNotes.pdf][Introduction to functional programming]]. ~ Noam Zeilberger. #Haskell #FunctionalProgramming
++ [[https://noamz.org/teaching/CSE301/2025/Notes/DataNotes.pdf][First-order data types and pattern-matching ~ Noam Zeilberger]]. #Haskell #FunctionalProgramming
++ [[https://noamz.org/teaching/CSE301/2025/Notes/HONotes.pdf][Higher-order functions and type classes]]. ~ Noam Zeilberger. #Haskell #FunctionalProgramming
++ [[https://noamz.org/teaching/CSE301/2025/Notes/LambdaNotes.pdf][Lambda calculus and typing]]. ~ Noam Zeilberger. #Haskell #FunctionalProgramming #LambdaCalculus #TypeTheory
+
 *** 25-Nov-25
 + [[https://arxiv.org/abs/2511.19142][Formalizing computational paths and fundamental groups in Lean]]. ~ Arthur F. Ramos, Anjolina G. de Oliveira, Ruy J. G. B. de Queiroz, Tiago M. L. de Veras. #ITP #LeanProver
 + [[https://arxiv.org/abs/2505.20613][REAL-Prover: Retrieval augmented lean prover for mathematical reasoning]]. ~ Ziju Shen et als. #ITP #LeanProver #LLMs #Math
