--- a/README.org
+++ b/README.org
@@ -11,6 +11,7 @@ its content.
 
 * Content                                                                      :TOC:
 - [[#lecturas-del-año-2025][Lecturas del año 2025]]
+  - [[#diciembre-2025][Diciembre 2025]]
   - [[#noviembre-2025][Noviembre 2025]]
   - [[#octubre-2025][Octubre 2025]]
   - [[#septiembre-2025][Septiembre 2025]]
@@ -78,7 +79,21 @@ its content.
 
 * Lecturas del año 2025
 
+** Diciembre 2025
+
+*** 02-Dic-25
++ [[https://mckoen.ca/files/Jack_McKoen_MSc_Thesis_final.pdf][A formalization of functor quasi-categories in Lean 4]]. ~ Jack McKoen. #ITP #LeanProver #Math
+
 ** Noviembre 2025
+
+*** 29-Nov-25
++ [[https://www.preprints.org/frontend/manuscript/4c5b9aa1e5513fe201673649f4e3c8ad/download_pub][The machine translation of Landau’s analysis of foundations in Rocq]]. ~ Yue Guan, Yaoshun Fu, XiangTao Meng. #ITP #Rocq #Math
++ [[https://arxiv.org/abs/2511.20118v1][Formalization of brownian motion in Lean]]. ~ Rémy Degenne, David Ledvinka, Etienne Marion, Peter Pfaffelhuber. #ITP #LeanProver
++ [[https://openreview.net/forum?id=orPt2nxLoC][Kimina Lean server: A high-performance Lean server for large-scale verification]]. ~ Marco Dos Santos et als. #ITP #LeanProver #LLMs
++ [[https://openreview.net/forum?id=RrSQxcg6Nu][ProofGym: Unifying LLM-based theorem proving across formal systems]]. ~ Xinrui Li et als. #ITP #LeanProver #IsabelleHOL #CoqProver #LLMs
++ [[https://openreview.net/group?id=NeurIPS.cc/2025/Workshop/MATH-AI][The 5th Workshop on Mathematical Reasoning and AI at NeurIPS 2025]]. #AI #Math
++ [[https://arxiv.org/abs/2511.18760v1][HERMES: Towards efficient and verifiable mathematical reasoning in LLMs]]. ~ Azim Ospanov et als. #ITP #LeanProver #LLMs
++ [[https://spectrum.ieee.org/it-management-software-failures][How IT managers fail software projects (AI won’t solve IT’s management problems)]]. ~ Robert N. Charette. #Software
 
 *** 28-Nov-25
 + [[https://www.quantamagazine.org/mathematical-thinking-isnt-what-you-think-it-is-20241118/][Mathematical thinking isn’t what you think it is (The mathematician David Bessis claims that everyone is capable of, and can benefit greatly from, mathematical thinking)]]. ~ Kelsey Houston-Edwards. #Math
@@ -6768,7 +6783,7 @@ its content.
 
 *** 22-Nov-22
 + [[https://jeannin.github.io/papers/kheterpal2022formalization.pdf][Towards a formalization of the active corner method for collision avoidance in PVS]]. ~ Nishant Kheterpal, Jean-Baptiste Jeannin. #ITP #PVS
-+ [[https://hal.inria.fr/hal-03852060/document][A high-level separation logic for heap space under garbage collection]]. ~ Alexandre Moine, Arthur Charguéraud, François Pottier. #ITP #Coq 
++ [[https://hal.inria.fr/hal-03852060/document][A high-level separation logic for heap space under garbage collection]]. ~ Alexandre Moine, Arthur Charguéraud, François Pottier. #ITP #Coq
 + [[https://julesjacobs.com/pdf/locks.pdf][Higher-order leak and deadlock free locks]]. ~ Jules Jacobs, Stephanie Balzer. #ITP #Coq
 + [[https://drive.google.com/file/d/15vTlQ1iHZECivKCEIWRZbf46TP0qMhQf/view][Machine learning and autoformalisation]]. ~ Anthony Bordg. #MachineLearning #Autoformalisation #ITP #Math
 + [[https://towardsdatascience.com/python-to-oop-or-to-fp-13ac79a43b16][Python: To OOP or to FP? (That is the question)]]. ~ Isaac Harris-Holt.. #Python #FunctionalProgramming
