--- a/README.org
+++ b/README.org
@@ -81,6 +81,13 @@ its content.
 
 ** Diciembre 2025
 
+*** 07-Dic-25
++ [[https://lawrencecpaulson.github.io//2025/12/05/History_of_Proof_Assistants.html][50 years of proof assistants]]. ~ Lawrence Paulson. #ITP #IsabelleHOL #CoqProver #HOL
++ [[https://deepwiki.com/leanprover-community/mathlib4][DeepWiki leanprover-community/mathlib4: A comprehensive database of formalized theorems in Lean 4]]. #ITP #LeanProver #Math
++ [[https://arxiv.org/abs/2512.03175v1][The Seifert-van Kampen theorem via computational paths: A formalized approach to computing fundamental groups]]. ~ Arthur F. Ramos, Tiago M. L. de Veras, Ruy J. G. B. de Queiroz, Anjolina G. de Oliveira. #ITP #LeanProver #Math
++ [[https://ceur-ws.org/Vol-4117/PEG-Short-1.pdf][Teaching Prolog and logic programming with Jupyter Notebooks]]. ~ Galileo Sartor, Adam Wyner. #Prolog #LogicPO
++ [[https://arxiv.org/abs/2512.03492v1][Functional Python programming in introductory computer science courses]]. ~ Rajshekhar Sunderraman. #Python #FunctionalProgramming
+
 *** 06-Dic-25
 + [[https://youtu.be/xdbGdrVTGn0][An introduction to formal real analysis (Lecture 24: Topology)]]. ~ Alex Kontorovich. #ITP #LeanProver #Math
 
